<resources>
    <string name="app_name">German Bridge Scoreboard</string>
    <string name="title_home">Home</string>
    <string name="title_bids_outcomes">Bids/Outcomes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="game_ongoing">Game is ongoing</string>
    <string name="number_of_players">Number of Players</string>
    <string name="init_game">Initialize Game</string>
    <string name="input_name">Input Player Names</string>
    <string name="player">Player</string>
    <string name="name">Name</string>
    <string name="done">DONE</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="next">Next</string>
    <string name="bidding">Bidding</string>
    <string name="playing">Playing</string>
    <string name="round">"Round "</string>
    <string name="wins">Wins</string>
    <string name="bids">Bids</string>
    <string name="game_not_started">Game not started</string>
    <string name="test">test</string>
    <string name="rule_violation">Rule Violation</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="database_name">german_bridge_scoreboard</string>
    <string name="no_game_to_show">No game to show :D</string>
    <string name="game_ended">Game has ended</string>
    <string name="view_ranking">View Game Rankings</string>
    <string name="score">Score</string>
    <string name="back">BACK</string>
    <string name="show_ranking">Show Rankings</string>
    <string name="show_scoreboard">Show Scoreboard</string>
</resources>