<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="124dp"
        android:layout_height="114dp"
        android:layout_marginTop="48dp"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:text="2"
        android:textAlignment="center"
        android:textSize="84sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#FFEB3B"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/init_game"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/number_of_players"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/Widget.Material3.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:focusable="true"
        android:insetLeft="4dp"
        android:insetRight="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="-"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/Widget.Material3.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:focusable="true"
        android:includeFontPadding="false"
        android:insetLeft="4dp"
        android:insetRight="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="+"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:enabled="true"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"

    />

    <Button
        android:id="@+id/buttonNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

</androidx.constraintlayout.widget.ConstraintLayout>